fixed overlapping text

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,13 +23,15 @@
     align-items: center;
     font-size: 150%;
     word-break: normal;
-    word-wrap: break-word;
+    // word-wrap: break-word;
+    overflow: auto;
 }
 
 .latter {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: auto;
 }
 
 .oldName,
@@ -57,23 +59,23 @@
     align-items: center;
 }
 
-.example-enter {
-  opacity: 0.01;
-}
+// .example-enter {
+//   opacity: 0.01;
+// }
 
-.example-enter.example-enter-active {
-  opacity: 1;
-  transition: opacity .5s ease-in;
-}
+// .example-enter.example-enter-active {
+//   opacity: 1;
+//   transition: opacity .5s ease-in;
+// }
 
-.example-appear {
-  opacity: 0.01;
-  transition: opacity .5s ease-in;
-}
+// .example-appear {
+//   opacity: 0.01;
+//   transition: opacity .5s ease-in;
+// }
 
-.example-appear.example-appear-active {
-  opacity: 1;
-}
+// .example-appear.example-appear-active {
+//   opacity: 1;
+// }
 
 .changeBox {
   background: gray;
